--- a/docs/50_lead-by-example.mdx
+++ b/docs/50_lead-by-example.mdx
@@ -19,7 +19,7 @@ Do you want to have your published dataset highlighted here or do you need assis
 |Author(s)|Title|Repository and DOI of dataset|Curator(s)|Description of dataset|
 |---|---|---|---|---|
 |Robin M. Bär, Lukas Langer, Martin Nieger, Stefan Bräse|[Bicyclo\[1.1.1\]pentyl sulfoximines: synthesis and functionalizations](https://doi.org/10.1002/adsc.201901453)|[Chemotion Repository](https://dx.doi.org/10.14272/NMNCNBZSKZJASF-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/DMHUHEHJOBWIMO-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/PHPYRTSEAMTSEI-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/PLJOXMUHAAQZQY-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/UAZVVKAIALHHII-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/LFQXFMHDVUMDRF-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/AICNJBZHCMEDFX-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/NEKGDCIKXKJMQB-UHFFFAOYSA-N.2)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/XVYUYMKGDFPRBJ-UHFFFAOYSA-N.2)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/JPDHSBXYSZUVMX-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/XPZLSBJQMZMCMC-UHFFFAOYSA-N.1)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hkz5)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl07)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl18)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl29)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl3b)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl4c)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl5d)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl6f)|curated by publishing authors|The datasets, curated by the publishing authors, contains NMR data in the instrument manufacturers formats and is also provided by Chemotion Repository in the open format JCAMP-DX. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting. information PDF of the corresponding article.|
-|Steffen Bochenek, Fabrizio Camerin, Emanuela Zaccarelli, Armando Maestro, Maximilian M. Schmidt, Walter Richtering, Andrea Scotti|[In-situ study of the impact of temperature and architecture on the interfacial structure of microgels](https://dx.doi.org/10.1038/s41467-022-31209-3)|[RADAR](https://dx.doi.org/10.22000/603)|curated by publishing authors|The dataset  inludes raw, associated, and derived data supporting the reported results; methods: NR, DLS, AFM, SANS.RADAR DOI as well as ePIC for archived dataset (identical to published dataset) are given in the data availability statement. The RADAR DOI is also listed listed in the references. The NR raw data used in the study are available in the ILL Data Portal database under [accession](10.5291/ILL-DATA.9-11-187191) and [accession](10.5291/ILL-DATA.EASY-46292) (also listed in references and DAS).|
+|Steffen Bochenek, Fabrizio Camerin, Emanuela Zaccarelli, Armando Maestro, Maximilian M. Schmidt, Walter Richtering, Andrea Scotti|[In-situ study of the impact of temperature and architecture on the interfacial structure of microgels](https://dx.doi.org/10.1038/s41467-022-31209-3)|[RADAR](https://dx.doi.org/10.22000/603)|curated by publishing authors|The dataset  inludes raw, associated, and derived data supporting the reported results; methods: NR, DLS, AFM, SANS.RADAR DOI as well as ePIC for archived dataset (identical to published dataset) are given in the data availability statement. The RADAR DOI is also listed listed in the references. The NR raw data used in the study are available in the ILL Data Portal database under [accession](https://dx.doi.org/10.5291/ILL-DATA.9-11-187191) and [accession](https://dx.doi.org/10.5291/ILL-DATA.EASY-46292) (also listed in references and DAS).|
 |Toni Ditfe, Eileen Bette, Haider N. Sultani, Alexander Otto, Ludger A. Wessjohann, Norbert Arnold, Bernhard Westermann|[Synthesis and biological evaluation of highly potent fungicidal deoxy-hygrophorones](https://doi.org/10.1002/ejoc.202100729)|[RADAR](https://doi.org/10.22000/451)|Tillmann G. Fischer (IPB)|The dataset, prepared for publication under NFDI4Chem stewardship and published in RADAR, contains NMR and MS data in the instrument manufacturers formats as well as in open formats such as JCAMP-DX, NMReDATA for NMR data and mzML for MS data. Results from the bioassay are available as CSV. Additionally, all structures are provided as CTfiles and are listed, corresponding to their numbering in the publication, in an CSV including IPB 3LC lab journal entries, SMILES structure codes and InChI and InChIkey identifiers. The corresponding article references the dataset in the section on supporting information.|
 |Saskia Finckh, Liza-Marie Beckers, Wibke Busch, Eric Carmona, Valeria Dulio, Lena Kramer, Martin Krauss, Leo Posthuma, Tobias Schulze, Jaap Slootweg, Peter C. von der Ohe, Werner Brack|[A risk based assessment approach for chemical mixtures from wastewater treatment plant effluents](https://doi.org/10.1016/j.envint.2022.107234)|[Pangaea](https://doi.pangaea.de/10.1594/PANGAEA.940755)|curated by the publishing authors|The dataset includes results data, raw mass spectral files, and processing data (MZmine, MZquant, Tracefinder). Pangaea is a repository for geospatial data and enviromental chemistry. The publication contains a supplemental [word document](https://ars.els-cdn.com/content/image/1-s2.0-S016041202200160X-mmc1.docx) and [spreadsheet](https://ars.els-cdn.com/content/image/1-s2.0-S016041202200160X-mmc2.xlsx).|
 |Shuxia Guo et al.|[Comparability of Raman spectroscopic configurations: A large scale cross-laboratory study](https://doi.org/10.1021/acs.analchem.0c02696)|[Zenodo](https://zenodo.org/record/4152953)|curated by publishing authors|Slightly processed raw data for the paper 'Comparability of Raman Spectroscopic Configurations: A Large Scale Cross-Laboratory Study': The processing include a spike removal to allow an interpolation to a common wavenumber axis. Always three files belong to each other: wavenumber axis file (wx_XYZ), spectral intensity file (spec_XYZ) and metadata file (meta_XYZ). The ‘XYZ’ refers to the samples measured (see the publication and its SI for details).|
@@ -34,8 +34,8 @@ Do you want to have your published dataset highlighted here or do you need assis
 |Agneta Prasse, Viola Munzert, Elena José, Klaus-Peter Zeller, Hans-Ullrich Siehl, Stefan Berger, DieterSicker|[Die Polei-Minze im Wandel der Zeiten](https://doi.org/10.1002/ciuz.201800860)|[RADAR4Chem](https://doi.org/10.22000/785)|curated by Tillmann G. Fischer (IPB)|The dataset, prepared for publication under NFDI4Chem stewardship and published in RADAR4Chem, contains NMR, MS and UV/VIS data in the instrument manufacturers formats as well as in open formats such as JCAMP-DX for NMR and UV/VIS data and mzML for MS data. Analytical data of CD spectroscopy and MS spectrometry were exported as tabular files and are also provided as CSV files. The structure information on (R)-+-Pulegon and supplementary information are provided as in tabular files and as SDfile format. The corresponding article does not reference to the dataset.|
 |Dennis Reinhard, Frank Rominger, Michael Mastalerz|[Desymmetrization strategy to achieve triptycene-based 3,6-dimethoxytriphenylenes via oxidative cyclodehydrogenation](https://doi.org/10.1002/ejoc.202001073)|[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc25v89m)<br/>[heiData](https://doi.org/10.11588/data/OH6757)|curated by publishing authors|The datasets, curated by the publishing authors, and published in heiData, contains data of NMR, MS, IR in the instrument manufacturers formats.The IR data is also available in TSV format. Elemental analysis data is provided as JPG. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting information PDF of the corresponding article.|
 |Franziska Schulze, Juliane Titus, Peter Mettke, Stefan Berger, Hans-Ullrich Siehl, Klaus-Peter Zeller, Dieter Sicker|[Karminsäure - Das Rot aus Cochenilleläusen](https://doi.org/10.1002/ciuz.201300634)|[RADAR4Chem](https://doi.org/10.22000/795)|curated by Tillmann G. Fischer (IPB)|The dataset, prepared for publication under the NFDI4Chem stewardship and published in RADAR4Chem contains NMR, MS, UV/VIS and CD data. NMR data was previously published in NMRShiftDB2 and are provided in Bruker format together with NMReDATA. MS data were converted in several different formats including mzML. UV/VIS data are available in JCAMP-DX format. The structure information on carminic acid and further supplementary information are provided in tabular files and as SDfile. The corresponding article does not reference to the dataset.|
-|Fabian Thomas, Matthias Oster, Florian Schön, Kai C. Göbgen, Benedikt Amarouch, Dominik Steden, Alexander Hoffmann, Sonja Herres-Pawlis|[A new generation of terminal copper nitrenes and their application in aromatic C–H amination reactions](https://dx.doi.org/10.14272/UFNYJPFRGDSKSE-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/LSGGPBYVWWQPOY-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/AXGNYRCNCNZKKZ-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/ZXFVPDKZHCLOHM-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/MHRJPVSEKXPPCE-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/BJUATVHTJTTWSW-UHFFFAOYSA-H.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/BJUATVHTJTTWSW-UHFFFAOYSA-H.1)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23w7mw)<br/>[ioChem-DB](https://doi.org/10.19061/iochem-bd-6-84)|curated by publishing authors|The datasets, curated by the publishing authors, contain NMR data in the instrument manufacturers formats and is also provided by Chemotion Repository in the open format JCAMP-DX. Crystallographic data as CIF files are available from CCDC and computational data was deposited in ioChem-DB. References to the crystallographic data is given in the section on supporting information in the corresponding publication. References on NMR data can be retrieved from the supplementary information PDF.|
-|Nadine Vogler, Thomas Bocklitz, Firas Subhi Salah, Carsten Schmidt, Rolf Brauer, Tiantian Cui, Masoud Mireskandari, Florian R. Greten, Michael Schmitt, Andreas Stallmach, Iver Petersen, Jürgen Popp[|Systematic evaluation of the biological variance within the Raman based colorectal tissue diagnostics](https://doi.org/10.1002/jbio.201500237)|[Zenodo](https://zenodo.org/record/3905058)|curated by publishing authors|In the following, a short desciption for each csv files: Meta data: includes information about mice ID, scans collected from each mouse, location of extracted scans, activity of P53 gene, mouce gender, tissue type. MSpectra: contains mean spectra of tissue . Wavenumbers: includes Raman spectra. wavenumbers.TissueLabels: describes different divisions of tissue types;e.g. normal vs abnormal, normal vs HB vs Karzinom, normal vs HB vs adenoma vs carcinomatypes with respect to each extracted scan.|
+|Fabian Thomas, Matthias Oster, Florian Schön, Kai C. Göbgen, Benedikt Amarouch, Dominik Steden, Alexander Hoffmann, Sonja Herres-Pawlis|[A new generation of terminal copper nitrenes and their application in aromatic C–H amination reactions](https://dx.doi.org/10.14272/UFNYJPFRGDSKSE-UHFFFAOYSA-N.1)|[Chemotion Repository](https://dx.doi.org/10.14272/LSGGPBYVWWQPOY-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/AXGNYRCNCNZKKZ-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/ZXFVPDKZHCLOHM-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/MHRJPVSEKXPPCE-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/BJUATVHTJTTWSW-UHFFFAOYSA-H.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/BJUATVHTJTTWSW-UHFFFAOYSA-H.1)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23w7mw)<br/>[ioChem-DB](https://doi.org/10.19061/iochem-bd-6-84)|curated by publishing authors|The datasets, curated by the publishing authors, contain NMR data in the instrument manufacturers formats and is also provided by Chemotion Repository in the open format JCAMP-DX. Crystallographic data as CIF files are available from CCDC and computational data was deposited in ioChem-DB. References to the crystallographic data is given in the section on supporting information in the corresponding publication. References on NMR data can be retrieved from the supplementary information PDF.|
+|Nadine Vogler, Thomas Bocklitz, Firas Subhi Salah, Carsten Schmidt, Rolf Brauer, Tiantian Cui, Masoud Mireskandari, Florian R. Greten, Michael Schmitt, Andreas Stallmach, Iver Petersen, Jürgen Popp|[Systematic evaluation of the biological variance within the Raman based colorectal tissue diagnostics](https://doi.org/10.1002/jbio.201500237)|[Zenodo](https://zenodo.org/record/3905058)|curated by publishing authors|In the following, a short desciption for each csv files: Meta data: includes information about mice ID, scans collected from each mouse, location of extracted scans, activity of P53 gene, mouce gender, tissue type. MSpectra: contains mean spectra of tissue . Wavenumbers: includes Raman spectra. wavenumbers.TissueLabels: describes different divisions of tissue types;e.g. normal vs abnormal, normal vs HB vs Karzinom, normal vs HB vs adenoma vs carcinomatypes with respect to each extracted scan.|
 |Xubin Wang, Bernd Kohl, Frank Rominger, Sven M. Elbert, Michael Mastalerz|[A triptycene-based enantiopure bis(diazadibenzoanthracene) by a chirality-assisted synthesis approach](https://doi.org/10.1002/chem.202002781)|[heiDATA](https://heidata.uni-heidelberg.de/dataset.xhtml?persistentId=doi:10.11588/data/46LINE&version=1.0)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc25b961)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc25b972)|curated by publishing authors|The datasets, curated by the publishing authors, and published in heiData, contains data of NMR, MS, IR in the instrument manufacturers formats.The IR data is also available in TSV format. Elemental analysis data is provided as JPG. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting information PDF of the corresponding article.|[RADAR4Chem](https://doi.org/10.22000/786)|curated by Tillmann G. Fischer (IPB)|The dataset, prepared for publication under the NFDI4Chem stewardship and published in RADAR4Chem contains NMR, MS, UV/VIS and IR data. NMR data are provided in Bruker format, as JCAMP-DX (MNova) and NMRium format including NMReDATA (SDfile). MS data are also available in open format mzML. IR and UV/VIS data are accessible in tabular files and in JCAMP-DX format. The structure information on Linderazulene and further supplementary information are provided as tables and SDfile. The corresponding article does not reference to the dataset.|
 
 :::note *This table will be continuously updated with further publication dataset pairs.*
