--- a/docs/50_data_publication/20_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository.mdx
@@ -21,25 +21,25 @@ The repositories that fulfil the above mentioned criteria are reported in the fo
 
 ## Core Repositories
 
-- [Chemotion Repository](https://www.chemotion-repository.net/welcome)<br></br>Field-specific sample and reaction centric repository including analysis data such as NMR, IR and mass data.
-- [MassBank EU](https://massbank.eu/MassBank/)<br></br>Field-specific ecosystem of databases and tools for mass spectrometry reference spectra.
-- [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/)<br></br>Generic, multi-disciplinary repository that offers a free and reliable home for all chemical research data that do not fulfill the specifications of field-specific repositories. 
-- [STRENDA DB](https://www.beilstein-strenda-db.org/)<br></br>Field-specific repository for enzymology data, which incorporates the STRENDA Guidelines for reporting enzymology data.
-- [SUPRABANK](https://suprabank.org/)<br></br>Field-specific repository for intermolecular interactions data.
+- [Chemotion Repository](https://www.chemotion-repository.net/welcome)<br/>Field-specific sample and reaction centric repository including analysis data such as NMR, IR and mass data.
+- [MassBank EU](https://massbank.eu/MassBank/)<br/>Field-specific ecosystem of databases and tools for mass spectrometry reference spectra.
+- [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/)<br/>Generic, multi-disciplinary repository that offers a free and reliable home for all chemical research data that do not fulfill the specifications of field-specific repositories. 
+- [STRENDA DB](https://www.beilstein-strenda-db.org/)<br/>Field-specific repository for enzymology data, which incorporates the STRENDA Guidelines for reporting enzymology data.
+- [SUPRABANK](https://suprabank.org/)<br/>Field-specific repository for intermolecular interactions data.
 
 ## Associated Repositories
 
-- [Cambridge Structural Database](https://www.ccdc.cam.ac.uk/structures/)<br></br>Field-specific repository for x-ray diffraction data of molecules generally containing at least carbon and hydrogen, operated by the Cambridge Crystallographic Data Centre (CCDC)
-- [Inorganic Crystal Structure Database](https://icsd.fiz-karlsruhe.de/)<br></br>Field-specific repository for x-ray diffraction data of inorganic compounds, elements, minerals and intermetallic compounds, operated by FIZ Karlsruhe
+- [Cambridge Structural Database](https://www.ccdc.cam.ac.uk/structures/)<br/>Field-specific repository for x-ray diffraction data of molecules generally containing at least carbon and hydrogen, operated by the Cambridge Crystallographic Data Centre (CCDC)
+- [Inorganic Crystal Structure Database](https://icsd.fiz-karlsruhe.de/)<br/>Field-specific repository for x-ray diffraction data of inorganic compounds, elements, minerals and intermetallic compounds, operated by FIZ Karlsruhe
 - [Joint CCDC/FIZ Access Structures Service](https://www.ccdc.cam.ac.uk/structures/)
 
 ## Other Relevant Repositories
 
-- [NOMAD](https://nomad-lab.eu/)<br></br>Field-specific repository for materials science data.
-- [ioChem-BD](https://www.iochem-bd.org/)<br></br>Field-specific repository for computational chemistry.
-- [RADAR](https://www.radar-service.eu/radar/en/home)<br></br>Generic, multi-disciplinary research data repository.
-- [Zenodo](https://zenodo.org/)<br></br>Generic repository developed under the European OpenAIRE program, operated by CERN.
-- [EUDAT B2SHARE](https://sp.eudat.eu/catalog/resources/709c053d-3b3f-4c54-8ef4-6efeea387816)<br></br>Generic repository operated by a pan-european network consisting of more than 25 research organisations, data and computing centers.
+- [NOMAD](https://nomad-lab.eu/)<br/>Field-specific repository for materials science data.
+- [ioChem-BD](https://www.iochem-bd.org/)<br/>Field-specific repository for computational chemistry.
+- [RADAR](https://www.radar-service.eu/radar/en/home)<br/>Generic, multi-disciplinary research data repository.
+- [Zenodo](https://zenodo.org/)<br/>Generic repository developed under the European OpenAIRE program, operated by CERN.
+- [EUDAT B2SHARE](https://sp.eudat.eu/catalog/resources/709c053d-3b3f-4c54-8ef4-6efeea387816)<br/>Generic repository operated by a pan-european network consisting of more than 25 research organisations, data and computing centers.
 
 ## Further Repositories (currently in development):
 
