--- a/i18n/de/docusaurus-plugin-content-docs/current/20_role/40_data_steward.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/20_role/40_data_steward.mdx
@@ -3,39 +3,38 @@ title: "Data Steward"
 slug: "/data_steward"
 ---
 
-# Data Steward
+# Datenverwalter
 
-The role of a data steward is fairly new in research and thus is still evolving and being defined. In 2019, the [final report](https://doi.org/10.5281/zenodo.3474630) for the Dutch project titled *Towards a community-endorsed data steward profession description for life science research* defined data stewardship as follows:
+Die Rolle des Datenverwalters ist in der Forschung relativ neu und befindet sich daher noch in der Entwicklung und Definition. Im Jahr 2019 wurde im [Abschlussbericht] (https://doi.org/10.5281/zenodo.3474630) des niederländischen Projekts mit dem Titel *Towards a community-endorsed data steward profession description for life science research* die Datenverwaltung wie folgt definiert:
 
-> “Data stewardship is the responsible planning and executing of all actions on digital data before, during and after a research project, with the aim of optimising the usability, reusability and reproducibility of the resulting data.”
+> "Datenverwaltung ist die verantwortungsvolle Planung und Durchführung aller Aktionen mit digitalen Daten vor, während und nach einem Forschungsprojekt, mit dem Ziel, die Nutzbarkeit, Wiederverwendbarkeit und Reproduzierbarkeit der resultierenden Daten zu optimieren."
 
-From this definition, it follows that a data steward is concerned with, in broad terms, ensuring the quality of the research data throughout the [research data life cylce](/docs/data_life_cycle) by applying the [FAIR Data Principles](/docs/fair).
+Aus dieser Definition ergibt sich, dass ein Datenverwalter im weitesten Sinne damit beschäftigt ist, die Qualität der Forschungsdaten während des gesamten [Lebenszyklus der Forschungsdaten](/docs/data_life_cycle) durch Anwendung der [FAIR Data Principles](/docs/fair) sicherzustellen.
 
 
-## Tasks and Skills
+## Aufgaben und Fertigkeiten
 
-A data steward's task can take on various forms, often depending on the exact position within the organization and the individual's personal skill set and background. The duties may involve defining appropriate [repositories](/docs/repositories) for [data publication](/docs/data_publication), consulting on [data formats](/docs/format_standards) and [metadata](/docs/metadata) standards, setting up data documentation and metadata management systems, e.g. through an [electronic laboratory notebook (ELN)](/docs/eln), and training researchers on [best practices](/docs/best_practice). The [Engaging Researchers with Data Management: The Cookbook](https://www.openbookpublishers.com/product/1080) elaborates on the various tasks and skills for the role of data steward. In it, Alastair Dunning, the Head of
-Research Data Services at TU Delft, is quoted saying:
+Die Aufgaben eines Datenverwalters können verschiedene Formen annehmen, oft abhängig von der genauen Position innerhalb der Organisation und den persönlichen Fähigkeiten und dem Hintergrund der Person. Zu den Aufgaben kann es gehören, geeignete [Repositorien](/docs/repositories) für die [Datenveröffentlichung](/docs/data_publication) zu definieren, über [Datenformate](/docs/format_standards) und [Metadaten](/docs/metadata) zu beraten, Systeme zur Datendokumentation und Metadatenverwaltung einzurichten, z. B. durch einen [elektronischen Laborjournal](/docs/data_publication). z. B. durch ein [elektronisches Laborjournal (ELN)](/docs/eln), und die Schulung von Forschern in [bewährten Verfahren](/docs/best_practice). Im [Engaging Researchers with Data Management: The Cookbook](https://www.openbookpublishers.com/product/1080) werden die verschiedenen Aufgaben und Fähigkeiten für die Rolle des Datenverwalters näher erläutert. Darin beschreibt Alastair Dunning, der Leiter der
+Research Data Services an der TU Delft, mit den Worten zitiert:
 
-> “Interpersonal skills are key to the success of the Data Steward.”
+> "Zwischenmenschliche Fähigkeiten sind der Schlüssel zum Erfolg des Data Steward."
 
-This reflects the importance of a data steward's communication skills. 
+Dies zeigt, wie wichtig die Kommunikationsfähigkeiten eines Datenverwalters sind. 
 
-Data stewards may work directly at an institute, but, in Germany, many are part of larger collaborative projects such as [Collaborative Research Centers](https://www.dfg.de/en/research_funding/programmes/coordinated_programmes/collaborative_research_centres/) or even part of various [NFDI consortia](https://www.nfdi.de/?lang=en). They often take on the role of communicating a specific research community's needs and requirements, enabling developers at IT centers, university libraries, ELN providers, and the NFDI to create tailored solutions for digital research data. In the above-mentioned cookbook, several strategies for developing and settling data stewards are outlined. One of the presented models is the “rent-a-data-steward”, which differs from the current models. Here, data stewards are not permanently located within institutes, instead, they are “loaned” to the institutes, projects, etc. for a certain period of time.
+Datenverwalter können direkt an einem Institut arbeiten, aber in Deutschland sind viele von ihnen Teil größerer Verbundprojekte wie [Sonderforschungsbereiche] (https://www.dfg.de/en/research_funding/programmes/coordinated_programmes/collaborative_research_centres/) oder sogar Teil verschiedener [NFDI-Konsortien] (https://www.nfdi.de/?lang=en). Sie übernehmen oft die Rolle, die Bedürfnisse und Anforderungen einer bestimmten Forschungsgemeinschaft zu kommunizieren, so dass Entwickler in IT-Zentren, Universitätsbibliotheken, ELN-Anbietern und der NFDI maßgeschneiderte Lösungen für digitale Forschungsdaten erstellen können. In dem oben erwähnten Kochbuch werden mehrere Strategien zur Entwicklung und Einsetzung von Datenverwaltern skizziert. Eines der vorgestellten Modelle ist der "rent-a-data-steward", der sich von den gängigen Modellen unterscheidet. Hier sind die Datenverwalter nicht dauerhaft in den Instituten angesiedelt, sondern werden für einen bestimmten Zeitraum an die Institute, Projekte etc. "ausgeliehen".
+Um Daten effizient zu verwalten und den Überblick zu behalten, können Datenverwalter einen [Datenmanagementplan](/docs/dmp) als unterstützendes Instrument verwenden.
 
-To efficiently manage data and maintain an overview, data stewards can use a [Data Management Plan](/docs/dmp) as a supporting tool.
+Kürzlich hat ein [BMBF](https://www.bmbf.de/bmbf/de/home/home_node.html)-gefördertes Projekt mit dem Titel [DataStew](https://www.ub.uni-koeln.de/forschen_publizieren/forschen/forschungsdaten_managen/datastew/index_ger.html) das Konzept der Datenverwaltung in der deutschen Hochschullandschaft analysiert und verschiedene Anforderungen der Interessengruppen identifiziert, um Empfehlungen für die Ausbildung und Schulung für diese Rolle geben zu können. Ähnlich wie im oben erwähnten niederländischen Projekt zeigen die ersten [Ergebnisse](https://doi.org/10.5281/zenodo.7327371) hier die vielfältigen Aufgabenbereiche von Datenverwaltern auf. Von der Beratung zu allgemeinen FDM-Diensten, der Entwicklung oder dem Ausbau von IT-Tools und Infrastruktur für FDM in der Forschung, der disziplinspezifischen Beratung, der Durchführung eigener datenfokussierter Forschung für bestimmte Disziplinen bis hin zur Übernahme von Koordinationsfunktionen gleicht selten eine Datenverwalterposition der anderen.
 
-Recently, a [BMBF](https://www.bmbf.de/bmbf/de/home/home_node.html)-funded project titled [DataStew](https://www.ub.uni-koeln.de/forschen_publizieren/forschen/forschungsdaten_managen/datastew/index_ger.html) has been analyzing the concept of data stewardship in the German academic landscape and identifying various stakeholder requirements to be able to provide recommendations for education and training for the role. Similar to the above-mentioned Dutch project, the first [results](https://doi.org/10.5281/zenodo.7327371) here show the multi-faceted task areas assigned to data stewards. From consultating on general RDM services, development or expansion of IT-tools and infrastructure for RDM in research, discipline-specific consulting, conducting their own data-focused research for specific disciplines, to occupying coordinative roles, one data steward position is rarely like the next.
+### Datenverwalter in der Chemie
 
-### Data Stewards in Chemistry
+Chemische Forschung ist oft eine Kombination aus Beobachtungsdaten und digitalen Daten. Während der Schwerpunkt bei FDM und Data Stewardship in der Regel auf letzteren liegt - wie in der eingangs zitierten Definition betont -, kann der Aspekt der Beobachtungsdaten nicht ignoriert werden. Traditionell werden diese Informationen in handschriftlichen Laborprotokollen festgehalten. Hier müssen die Datenverwalter die Art der durchgeführten Laborarbeit verstehen und bei der Auswahl geeigneter ELNs zur Digitalisierung dieser Art von Informationen helfen. Für digitale Daten müssen die Datenverwalter die gemeinschaftsspezifischen Standards für Datenformate und [Mindestinformationen (MI) zu Metadaten](/docs/metadata) kennen. Mit diesem Wissen können sie bei der effizienten Implementierung von Daten-Workflows helfen, die den Datentransfer vom Gerät zu sicheren Speicherorten, die Konvertierung von Datenformaten und die Beschriftung von Metadaten automatisieren. Zum Beispiel kann [Chemotion ELN's Geräteintegration] (https://www.chemotion.net/chemotionsaurus/docs/device-integration) solche Arbeitsabläufe erleichtern, während die Daten direkt mit den im ELN aufgezeichneten Molekülen und Reaktionen verbunden werden. Solche Prozesse ermöglichen die Veröffentlichung eines gut dokumentierten [Datensatzes](/docs/data_publication) in [Repositorien](/docs/repositories) neben den in Zeitschriftenartikeln berichteten Ergebnissen.
 
-Chemical research is often a combination of observational data and digital data. While the focus in RDM and data stewardship typically lies on the latter—as emphasized in the definition quoted at the beginning of this article—the oberservational aspect cannot be ignored. Traditionally, this information is recorded in hand-written lab journals. Here, data stewards must understand the type of laboratory work carried out and assist in selecting appropriate ELNs to digitize this type of information. For digital data, data stewards must be aware of community-specific standards for data formats and [minimum information (MI) regarding metadata](/docs/metadata) . With this knowledge, they can assist in efficiently implementing data workflows that automate data transfer from device to secure storage locations, data format conversions, and metadata annotation. For example, [Chemotion ELN's device integration](https://www.chemotion.net/chemotionsaurus/docs/device-integration) can facilitate such workflows, while directly connecting the data to molecules and reactions recorded in the ELN. Such processes allow for a well-documented [dataset to be published](/docs/data_publication) in [repositories](/docs/repositories) alongside the results reported in journal articles.
+## Vernetzung und kontinuierliche Weiterbildung
 
-## Networking and Continuous Training
+Aufgrund ihres breiten Aufgabenspektrums engagieren sich Datenverantwortliche kontinuierlich für die Vernetzung, den Austausch und die Weiterentwicklung des eigenen Wissens über FDM-Ansätze, Best Practices, Tools und Services. So veranstaltet die RWTH Aachen ein monatliches [Open RDM Network Meeting] (https://www.rwth-aachen.de/go/id/mkbr/file/9-6699/), das sich an Datenverantwortliche richtet, und Landesinitiativen wie [fdm.nrw] (https://www.fdm.nrw/) bieten verschiedene Vernetzungs- und Fortbildungsmöglichkeiten. NFDI4Chem organisiert auch eine Einsteiger-Workshop-Reihe mit dem Titel [FAIR Research Data Management: Basics for Chemists](https://www.nfdi4chem.de/index.php/event/workshop-fair-research-data-management-basics-for-chemists/) für Forscher und Datenverwalter gleichermaßen und konzentriert sich auf Konzepte und Werkzeuge des Forschungsdatenmanagements in der Chemie.
 
-Due to their wide breadth of duties, data stewards are continuously involved in networking, exchange, and furthering their own knowledge on RDM approaches, best practices, tools, and services. The RWTH Aachen University, for example, holds a monthly [Open RDM Network Meeting](https://www.rwth-aachen.de/go/id/mkbr/file/9-6699/) (in German) geared at data stewards, while state initiatives such as [fdm.nrw](https://www.fdm.nrw/) offer various networking and training opportunities. NFDI4Chem also organizes an entry-level workshop series titled [FAIR Research Data Management: Basics for Chemists](https://www.nfdi4chem.de/index.php/event/workshop-fair-research-data-management-basics-for-chemists/) for researchers and data stewards alike and focuses on research data management concepts and tools in chemistry.
-
-## Sources and Further Information
+## Quellen und weitere Informationen
 
 - [Final report: Towards FAIR data steward as profession for the lifesciences. Report of a ZonMw funded collaborative approach built on existing expertise](https://doi.org/10.5281/zenodo.3474630) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3474630.svg)](https://doi.org/10.5281/zenodo.3474630)
 - [Connie Clare, Maria Cruz, Elli Papadopoulou, James Savage, Marta Teperek, Yan Wang, Iza Witkowska, and Joanne Yeomans. 2019.Engaging Researchers with Data Management: The Cookbook (epub).OpenBookPublishers](https://doi.org/10.11647/OBP.0185)
