--- a/i18n/de/docusaurus-plugin-content-docs/current/30_data/00_data_guide.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/30_data/00_data_guide.mdx
@@ -7,44 +7,44 @@ id : "data_guide"
 
 import IntroButton from '@site/src/components/IntroButton.js'
 
-:::info Guidance for getting started:
-In this section, you can find information and resources about important topics and how to handle your data. These overarching concepts will provide key information and recommendations (such as what software might be useful to you) and refer you to other appropriate pages within the knowledge base or external resources.
+:::info Anleitung für die ersten Schritte:
+In diesem Abschnitt finden Sie Informationen und Ressourcen zu wichtigen Themen und zum Umgang mit Ihren Daten. Diese übergreifenden Konzepte liefern wichtige Informationen und Empfehlungen (z. B. welche Software für Sie nützlich sein könnte) und verweisen Sie auf andere geeignete Seiten innerhalb der Wissensdatenbank oder externe Ressourcen.
 :::
 
 
-### Data Management Plan
+### Datenmanagementplan
 
 
-A data management plan (DMP) describes the strategies and measures for handling research data during and after a project. Its aim is to address and define the technical, organisational and legal aspects of research data management in a clearly defined document well in advance. Find out more about DMPs, how to write one and what tools are available:
+Ein Datenmanagementplan (DMP) beschreibt die Strategien und Maßnahmen für den Umgang mit Forschungsdaten während und nach einem Projekt. Sein Ziel ist es, die technischen, organisatorischen und rechtlichen Aspekte des Forschungsdatenmanagements in einem klar definierten Dokument im Voraus zu regeln und festzulegen. Erfahren Sie mehr über DMPs, wie man eines erstellt und welche Hilfsmittel es gibt:
 
-<IntroButton url={"/docs/dmp"} imgUrl={"/img/nfdi4chem_Data_Management_Plan.svg"} text={"Data Management Plan"} />
+<IntroButton url={"/docs/dmp"} imgUrl={"/img/nfdi4chem_Data_Management_Plan.svg"} text={"Datenmanagementplan"} />
 
-### Data Organisation
+### Datenorganisation
 
-Learn how to organise your data, e.g. via appropriate file naming conventions and folder structures. In this context, data versioning, metadata & file formats are also introduced.
+Lernen Sie, wie Sie Ihre Daten organisieren können, z. B. durch geeignete Dateinamenskonventionen und Ordnerstrukturen. In diesem Zusammenhang werden auch Datenversionierung, Metadaten und Dateiformate vorgestellt.
 
-<IntroButton url={"/docs/data_organisation"} imgUrl={"/img/nfdi4chem_Data_Organisation.svg"} text={"Data Organisation"} />
+<IntroButton url={"/docs/data_organisation"} imgUrl={"/img/nfdi4chem_Data_Organisation.svg"} text={"Datenorganisation"} />
 
-### Documentation
+### Dokumentation
 
-Find out more about the tools, resources and software that can support you with data documentation.
+Erfahren Sie mehr über die Tools, Ressourcen und Software, die Sie bei der Datendokumentation unterstützen können.
 
-<IntroButton url={"/docs/data_documentation"} imgUrl={"/img/nfdi4chem_Data_Documentation.svg"} text={"Documentation"} />
+<IntroButton url={"/docs/data_documentation"} imgUrl={"/img/nfdi4chem_Data_Documentation.svg"} text={"Dokumentation"} />
 
-### Data Storage and Archiving
+### Datenspeicherung und Archivierung
 
-Storing and and archiving your data needs to be carefully considered. How many copies? Where? What access do I grant? Find out more:
+Die Speicherung und Archivierung Ihrer Daten muss sorgfältig überlegt werden. Wie viele Kopien? Wo? Welchen Zugang gewähre ich? Erfahren Sie mehr:
 
 <IntroButton url={"/docs/data_storage"} imgUrl={"/img/nfdi4chem_Data_Storage_and_Archiving.svg"} text={"Data Storage and Archiving"} />
 
-### Data Publication
+### Datenveröffentlichung
 
-Want to make your data available to others? Not quite sure how or where to publish your data? Find out more:
+Sie möchten Ihre Daten anderen zur Verfügung stellen? Sie wissen nicht genau, wie oder wo Sie Ihre Daten veröffentlichen können? Finden Sie mehr heraus:
 
 <IntroButton url={"/docs/data_publication"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publication"} />
 
-### How to choose the right repository
+### Wie man das richtige Repositorium auswählt
 
-Not sure which repository is the right one for your data? Find out more about selected reposoitories and what data types they are appropriate for:
+Sie sind sich nicht sicher, welches Repositorium das richtige für Ihre Daten ist? Erfahren Sie mehr über ausgewählte Reposoitories und welche Datentypen für sie geeignet sind:
 
 <IntroButton url={"/docs/choose_repository"} imgUrl={"/img/nfdi4chem_How_to_choose_the_right_repository.svg"} text={"How to choose the right repo"} />
